@@ -3,6 +3,6 @@ package br.com.sicredi.api.exception;
 public class InvalidCpfException extends RuntimeException {
 
     public InvalidCpfException(String cpf) {
-        super(String.format("The cpf '%s' is invalid", cpf));
+        super("The cpf '%s' is invalid".formatted(cpf));
     }
 }
