@@ -3,6 +3,6 @@ package br.com.sicredi.api.exception;
 public class InvalidRulingAttributeException extends RuntimeException {
 
     public InvalidRulingAttributeException(String attributeValue) {
-        super(String.format("The attribute value '%s' is not valid", attributeValue));
+        super("The attribute value '%s' is not valid\n ".formatted(attributeValue));
     }
 }
