@@ -1,7 +1,8 @@
 package br.com.sicredi.api.exception;
 
-public class SessionAlreadyStartedException extends RuntimeException{
+public class SessionAlreadyStartedException extends RuntimeException {
+
     public SessionAlreadyStartedException(String rulingId) {
-        super(String.format("The ruling session '%s' has already been started previously.", rulingId));
+        super("The ruling session '%s' has already been started previously.".formatted(rulingId));
     }
 }
